erDiagram
%% ⚠️ 사본 — ERD의 진실은 팀 ERDCloud다. 이 파일은 서버 파트 참고용이며, 어긋나면 ERDCloud가 맞다.
%%   (단, 아래 "미반영 누적분"에 적힌 항목만은 예외 — 이 파일이 앞서 있고 ERDCloud가 낡은 상태)
%%
%% 🔄 ERDCloud 미반영 누적분 — 건별로 즉시 반영하지 않고 모아서 한 번에 반영한다(0717 일혁 합의).
%%   스키마가 바뀌는 이슈마다 여기에 한 줄씩 쌓고, 일괄 반영 세션에서 ERDCloud에 옮긴 뒤 지운다.
%%   일괄 반영 때는 이 목록만 믿지 말고 파일 전체 ↔ ERDCloud 전수 대조 권장(목록 도입 전 드리프트 가능성).
%%   - [ ] challenge.end_reason 컬럼 추가 — enum·nullable(null=계산 판정 / GIVEN_UP=중도 포기) (#3, 0717)
%% ================================================================
%% 일혁 역할 전체 ERD (2026-07-06 — 분담표 + 와이어프레임 v2 반영)
%% 서버 소유: CHALLENGE · CHALLENGE_DAY · CHALLENGE_WEAK_CATEGORY
%%           · USER_REST(휴식 = '챌린지 사이 공백', 유저 단위 · 도중 휴식 없음/도중 그만두기=실패)
%%           · CHALLENGE_ADJUSTMENT(한도 조정 이력)
%%           · MINI_CHALLENGE(유저 소유·본챌 독립 — 정의+참여 합침, 0707 서버회의)
%%           · MINI_CHALLENGE_DAY · RECOMMENDED_MINI_CHALLENGE(추천 프리셋 카탈로그, 읽기 전용)
%% 외부 의존: USER(로그인=나연) · EXPENSE(지출=령준)

%% 테이블 안 만드는 것 (계산 or 미확정):
%%  - 온보딩 STEP1 '지난달 식비': 화면 문구상 비저장(클라 분석용) → 저장 안 함
%%  - 온보딩 '월급 금액': 화면에 입력 없음 확인(2026-07-06 일혁) → 저장 안 함 (구 Q3 해소 · user_profile 폐기)
%%  - 휴식기 홈 '보관 중인 내 기록': 직전 종료 챌린지 결과에서 조회 시 계산
%%  - 캐릭터/소비 상태: 하루 사용률(spent/한도)로 조회 시 계산 — 0-30 볼빵빵 / 30-70 보통 / 70-100 홀쭉 (0707 확정)
%%  - 경고 알림: 사용률 30%=주의, 70%=위험 (0714 캐릭터와 경계 통일, 구 40) — 저장 없이 계산
%%  - 중도 포기: 진행 중 챌린지를 status=FAIL 로 종료(도중 휴식 불가, 그만두면 실패 — 0707 확정)
%%  - 위젯: GET /current 재사용 예정 (저장 없음)
%%  - AI 소비습관 진단: 미확정(PM Q2) → 확정되면 결과 저장 테이블 검토
%%  - 알림: 분담표상 보류 + 담당 미정 → ERD 제외
%% ================================================================

    USER ||--o{ CHALLENGE : "유저별 챌린지(1:N)"
    USER ||--o{ USER_REST : "휴식 이력(1:N) · 챌린지 사이 공백"
    CHALLENGE ||--o{ CHALLENGE_DAY : "일별 판정(1:N)"
    CHALLENGE ||--o{ CHALLENGE_WEAK_CATEGORY : "약한 카테고리 선택(1:N)"
    CHALLENGE ||--o{ CHALLENGE_ADJUSTMENT : "한도 조정 이력(1:N, 최대 2회)"
    USER ||--o{ EXPENSE : "유저 지출(1:N) · 외부 · 챌린지엔 기간으로 매칭"
    USER ||--o{ MINI_CHALLENGE : "유저별 미니 챌린지(1:N) · 본챌 독립(0707 서버회의)"
    MINI_CHALLENGE ||--o{ MINI_CHALLENGE_DAY : "일별 체크(1:N)"
    %% RECOMMENDED_MINI_CHALLENGE 는 프리셋 카탈로그(읽기 전용) — 관계 없음, 추가 시 값만 복사

    USER {
        bigint id PK "외부: 로그인(나연)"
    }

    CHALLENGE {
        bigint id PK
        bigint user_id FK "→ USER"
        int duration_days "3/7/14/31/직접(N)"
        date start_date
        date end_date "start + duration - 1"
        int budget_total "기간 목표(원) — 최초 설정값(조정 이력과 별개)"
        int daily_limit "현재 유효 한도 · 최초 = floor(budget_total / duration_days) · 조정(최대 2회, 화면 확정) 시 갱신 → 이력은 CHALLENGE_ADJUSTMENT"
        boolean reset_by_payday "월급날 리셋 옵션 · 0711 존재 확정 · 0714 부분 확정(주기=월급날~월급날 · 기간형은 무관 · 현재는 저장만) · 잔여 정의 PM Q1"
        int payday_day "nullable, 1~31 · 동상"
        enum status "IN_PROGRESS / SUCCESS / FAIL · 도중 그만두기=포기→FAIL(0707: 도중 중단 불가, 포기만) · 도중 휴식 없음"
        enum end_reason "nullable · null=기록에서 계산된 판정(지출 수정 시 재계산 대상) · GIVEN_UP=중도 포기(유저 선언 FAIL — 재계산 제외, #3) · 배틀 무효 이식(VOID) 때 값 추가 전제(질문배경 11)"
        datetime created_at
    }

    CHALLENGE_DAY {
        bigint id PK
        bigint challenge_id FK "→ CHALLENGE · unique(challenge_id, day_date)"
        date day_date "판정 날짜 · 휴식은 챌린지 밖 기간이라 겹치지 않음(진입점=결과 화면, 화면 확정)"
        int spent_amount "그날 EXPENSE 합계(령준 데이터 연동)"
        int daily_limit "판정 당시 한도 스냅샷 — 조정(2-1) 대응 · V1 마이그레이션엔 없음, 조정 구현 시 추가"
        enum status "SUCCESS(<=한도) / OVER(>한도) · 미입력일 = 0원 가정(0630 회의 확정 — 행 없는 날은 0원=SUCCESS 취급)"
    }

    CHALLENGE_WEAK_CATEGORY {
        bigint id PK
        bigint challenge_id FK "→ CHALLENGE"
        varchar category "확정: 지출과 동일 7종(배달/외식/편의점/카페/간식/장보기/술자리)+직접추가 — 온보딩3(2026-07-07) · 명칭 약한/집중 혼용 · 진행 중 수정 가능(화면 문구) · unique(challenge_id, category)"
    }

    USER_REST {
        bigint id PK "휴식 = 챌린지 사이 공백(유저 단위 · 2026-07-06 재해석)"
        bigint user_id FK "→ USER"
        date rest_start_date "휴식 시작일"
        date planned_resume_date "복귀 예정일 = 시작 + 3일/1주/2주/직접선택"
        date actual_resume_date "nullable · 실제 복귀일('조금 더 쉴게요'로 예정과 달라질 수 있음)"
        datetime created_at
    }
%% USER_REST — 휴식 = 챌린지 '사이' 공백(유저 단위). 0707 전체회의: 챌린지 '도중' 휴식/중단은 없음(도중 그만두기=포기=FAIL).
%%  즉 휴식은 진행 중 챌린지가 없을 때만. 진입점 = 결과 화면 "잠깐 쉬고 나중에 시작할게요".
%%  횟수/기간 제한 없음 · '조금 더 쉴게요'=기간 재선택 연장 · 새 챌린지 생성 시 휴식 자동 종료(결정기록.md).
%%  휴식 중엔 "새로운 햄배틀 매칭 중단"(화면) → 령준이 매칭 시 이 테이블 참조(서버팀 계약).

    CHALLENGE_ADJUSTMENT {
        bigint id PK "한도 조정 1건 = 1행 · 챌린지당 최대 2회(행 수로 검증) · 조정은 여러 번이라 challenge에 안 넣고 별도 테이블"
        bigint challenge_id FK "→ CHALLENGE"
        int old_daily_limit "조정 전 한도"
        int new_daily_limit "조정 후 한도 = 현재 × 1.1(+10%) or 1.2(+20%)"
        datetime adjusted_at "조정 시각(이력 순서용)"
    }
%% CHALLENGE_ADJUSTMENT를 별도 테이블로 뺀 이유: 조정이 한 챌린지에 여러 번(최대 2회) 생기는 이벤트라,
%%  challenge에 컬럼으로 넣으면 횟수만큼 빈 컬럼 낭비 + 과거 변경 이력이 사라짐 → 행으로 쌓는 게 정석.
%% 과거 판정은 소급 안 함(화면: "지금까지 기록은 그대로 유지") — 날짜별 한도는 CHALLENGE_DAY.daily_limit 스냅샷.

    RECOMMENDED_MINI_CHALLENGE {
        bigint id PK "추천 프리셋 카탈로그 — 기획이 심는 고정 목록(읽기 전용). 유저가 '추가하기' 시 값만 MINI_CHALLENGE로 복사"
        varchar title "예: 오늘 커피 사먹지 않기"
        int duration_days "오늘만=1/3/7/14/31"
    }

    MINI_CHALLENGE {
        bigint id PK "유저가 실제 하는 미니 챌린지(정의+참여 합침, 0707) · 본 챌린지와 독립"
        bigint user_id FK "→ USER · 미니는 유저 소유(challenge_id 없음 — 본챌 독립)"
        varchar title "제목 · 추천에서 복사됐든 커스텀이든 동일(커스텀·추천 통일, 0707)"
        int duration_days "오늘만=1/3/7/14/31"
        date start_date "시작일(추가한 날)"
        date end_date "start + duration - 1"
        datetime created_at
    }
%% MINI_CHALLENGE = 유저 소유·본 챌린지 독립(0707 서버회의: 미니는 본챌과 따로 놈, 식비 판정 무관).
%%  0630 정의/참여(구 MINI_CHALLENGE + CHALLENGE_MINI_CHALLENGE)를 이 한 테이블로 합침.
%%  추천/커스텀 통일 → origin 없음. 추천은 RECOMMENDED_MINI_CHALLENGE에서 값 복사해 이 행 생성.
%%  본챌 독립이라 "본챌 기간 초과 금지" 제약 소멸. 미니 자체 기간(start~end)만 있음.

    MINI_CHALLENGE_DAY {
        bigint id PK "일별 체크 — 행 존재 = 그날 체크됨, 해제 = 행 삭제"
        bigint mini_challenge_id FK "→ MINI_CHALLENGE · unique(mini_challenge_id, check_date)"
        date check_date "미니 기간 내 날짜 · 과거 날짜 수정 허용(0707: 챌린지 기간 내 자유 수정)"
        datetime checked_at
    }
%% 집계(오늘 N/M · 연속 달성)는 저장 없이 조회 시 계산. streak = 그날 활성 미니 전부 체크한 날의 연속.

    EXPENSE {
        bigint id PK "외부: 지출 입력(령준 확정) · '식비'만"
        bigint user_id FK "→ USER"
        date spent_date
        int amount "원"
        varchar category "확정 7종(배달/외식/편의점/카페/간식/장보기/술자리) + 직접추가"
        varchar emotion "nullable(건너뛰기 가능) · 스트레스/보상/귀찮아서/그냥먹고싶어서/직접입력"
    }
